unpackaged/main/default/objects/AdviceRecipient__c/fields/AcceptedMedium__c.field-meta.xml
<CustomField>
    <fullName>AcceptedMedium__c</fullName>
    <description>Describes how the client accepted any of the recommendations</description>
    <label>Accepted medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>