unpackaged/main/default/objects/AdviceRecipient__c/fields/Advice__c.field-meta.xml
<CustomField>
    <fullName>Advice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The advice linked to this record</description>
    <label>Advice</label>
    <referenceTo>Advice__c</referenceTo>
    <relationshipLabel>Advice Recipients</relationshipLabel>
    <relationshipName>AdviceRecipients</relationshipName>
    <type>Lookup</type>
</CustomField>