unpackaged/main/default/objects/AdviceRecipient__c/fields/Advised__c.field-meta.xml
<CustomField>
    <fullName>Advised__c</fullName>
    <description>Indicates whether the person linked on this record was involved in the linked advice</description>
    <label>Advised</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>