unpackaged/main/default/objects/AdviceRecipient__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person this record is tracking</description>
    <label>Person</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advice Recipients</relationshipLabel>
    <relationshipName>AdviceRecipients</relationshipName>
    <type>Lookup</type>
</CustomField>